--- a/src/components/FoodDiaryContent/FoodDiaryContent.scss
+++ b/src/components/FoodDiaryContent/FoodDiaryContent.scss
@@ -1,20 +1,44 @@
+@import "../../App.scss";
+
 .food-diary-content {
   tr.macros {
     .meal {
       width: fit-content;
+      text-align: left;
     }
 
     td {
       width: 10px;
       background-color: rgb(238, 238, 238);
       text-transform: capitalize;
-      padding: 2px 15px 5px 10px;
-      border-bottom: 1px solid #e6e6e6;
+      padding: 7px 15px 7px 10px;
+      border-bottom: 1px solid rgb(230, 230, 230);
     }
   }
 
   tr.bottom-bar {
-    color: rgb(93, 93, 255);
+    color: $Darker-blue;
     font-weight: bold;
+    padding-right: 75px;
+    font-size: 18px;
+    text-transform: capitalize;
+    text-align: left;
+
+    .add-food {
+      text-align: left;
+    }
+    a:hover,
+    a:visited,
+    a:link,
+    a:active {
+      text-decoration: none;
+      color: $Darker-blue;
+    }
+  }
+  .delete {
+    color: red;
+    font-weight: bold;
+    text-transform: lowercase !important;
+    font-size: 18px;
   }
 }
