--- a/src/components/FoodDiaryContent/FoodDiaryContent.scss
+++ b/src/components/FoodDiaryContent/FoodDiaryContent.scss
@@ -1,55 +1,62 @@
 @import "../../App.scss";
 
 .food-diary-content {
-   tr.macros {
-      .meal {
-         width: fit-content;
-         text-align: left;
-      }
-
-      td {
-         width: 10px;
-         background-color: rgb(238, 238, 238);
-         text-transform: capitalize;
-         padding: 7px 15px 7px 10px;
-         border-bottom: 1px solid rgb(230, 230, 230);
-      }
-   }
-
-   tr.bottom-bar {
-      color: $Darker-blue;
-      font-weight: bold;
-      padding-right: 75px;
-      font-size: 18px;
-      text-transform: capitalize;
+  tr.macros {
+    .meal {
+      min-width: 200px;
+      width: auto;
+      max-width: 225px;
       text-align: left;
+    }
 
-      .add-food {
-         text-align: left;
-      }
-      a:hover,
-      a:visited,
-      a:link,
-      a:active {
-         text-decoration: none;
-         color: $Lighter-blue;
-         padding-left: 15px;
-         padding-bottom: 10px;
-      }
-   }
-   .delete {
-      color: red;
-      font-weight: bold;
-      text-transform: lowercase !important;
-      font-size: 18px;
-   }
+    td {
+      width: 10px;
+      background-color: rgb(238, 238, 238);
+      text-transform: capitalize;
+      padding: 7px 15px 7px 10px;
+      border-bottom: 1px solid rgb(230, 230, 230);
+    }
+  }
+
+  tr.bottom-bar {
+    color: $Darker-blue;
+    font-weight: bold;
+    padding-right: 75px;
+    font-size: 16px;
+    text-transform: capitalize;
+    text-align: left;
+
+    .add-food {
+      text-align: left;
+    }
+    a:hover,
+    a:visited,
+    a:link,
+    a:active {
+      text-decoration: none;
+      color: $Lighter-blue;
+      padding-left: 15px;
+      padding-bottom: 10px;
+    }
+  }
+  .delete {
+    color: red;
+    font-weight: bold;
+    text-transform: lowercase !important;
+    font-size: 16px;
+  }
 }
 td.food-diary-render-meals-header {
-   font-size: 30px;
-   text-align: left;
-   color: $Darker-blue;
-   padding: 10px 10px 10px 10px;
+  font-size: 25px;
+  text-align: left;
+  color: $Darker-blue;
+  padding: 10px 10px 10px 10px;
 }
 .totals {
-   text-align: center;
+  text-align: center;
+  padding: 7px;
+}
+
+tfoot {
+  padding-top: 100px;
 }
