--- a/src/containers/FoodDiaryPage/FoodDiaryPage.scss
+++ b/src/containers/FoodDiaryPage/FoodDiaryPage.scss
@@ -17,14 +17,14 @@
 
   &-heading,
   h1 {
-    font-size: 27px;
+    font-size: 20px;
     color: $Darker-blue;
     text-transform: capitalize;
     display: flex;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 20px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 5px;
+    padding-right: 10px;
     align-self: center;
 
     &__text {
@@ -34,12 +34,13 @@
     button {
       background-color: $Darker-blue;
       color: white !important;
-      margin-left: 3px;
-      margin-right: 3px;
+      margin-left: 2px;
+      margin-right: 2px;
       padding: 5px;
       height: 43px;
       align-items: center;
-      font-size: 18px !important;
+      font-size: 15px !important;
+      padding-right: 5px !important;
     }
     &__button {
       width: 40px;
@@ -63,24 +64,24 @@
   }
 
   .food-diary-container {
-    font-size: 17px;
-    width: 940px;
-    margin: 20px auto;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
     .food-table {
       border-collapse: collapse;
       border-spacing: 0;
-      width: 66%;
     }
   }
 
   .meal-header {
     color: #00548f;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
     text-transform: capitalize;
     text-align: left;
-    padding: 15px 5px 10px 5px;
+    padding: 15px 5px 5px 5px;
   }
 
   .nutrient-column {
@@ -88,7 +89,7 @@
     color: #fff;
     padding: 5px 10px 5px 10px;
     border: 1px solid #fff;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: normal;
     text-align: center;
     text-transform: capitalize;
@@ -99,5 +100,10 @@
   }
   tr {
     text-align: center;
+    padding-bottom: 0px !important;
+  }
+  thead {
+    display: flex;
+    justify-content: flex-end;
   }
 }
