--- a/src/components/Tracker/Tracker.scss
+++ b/src/components/Tracker/Tracker.scss
@@ -1,37 +1,35 @@
-.tracker {
-  input {
-    padding: 6px;
-    border: solid 1px;
-    margin-top: 8px;
-    margin-right: 16px;
-    font-size: 15px;
-  }
+@import "../../App.scss";
 
-  button {
-    padding: 6px 10px;
-    margin-top: 8px;
-    margin-right: 16px;
-    background: #ddd;
-    font-size: 15px;
-    border: none;
-    cursor: pointer;
+.tracker {
+  h1 {
+    text-transform: capitalize;
+    color: $Lighter-blue;
+  }
+  h3 {
+    text-align: center;
+    text-transform: capitalize;
   }
 
   &-search-data {
-    padding: 20px 20px 20px 20px;
+    padding: 20px 20px 50px 20px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 
     tr {
+      width: 75%;
       td {
-        border-bottom: 1px solid rgb(161, 161, 161);
+        border-bottom: 1px solid $Lighter-blue;
         text-align: right;
         text-transform: lowercase;
-        padding: 2px 10px 2px 10px;
+        padding: 3px 20px;
       }
 
       td.label {
         text-transform: capitalize;
         font-weight: bold;
         text-align: left;
+        padding: 3px 20px;
       }
     }
   }
