--- a/src/containers/AddFoodPage/AddFoodPage.scss
+++ b/src/containers/AddFoodPage/AddFoodPage.scss
@@ -1,11 +1,55 @@
 @import "../../App.scss";
 
 .add-food-page {
-  display: grid;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  //   grid-template-columns: 1fr auto;
+  display: flex;
+  flex-direction: column;
+
+  h1 {
+    text-transform: capitalize;
+    color: $Lighter-blue;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: auto;
+  }
+
   max-width: $maxWidth();
-  margin: auto;
+
+  form {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+    input {
+      display: flex;
+      flex-direction: row;
+      width: 32%;
+      padding: 0.5em;
+      line-height: 2;
+      font-size: 13px;
+      border-radius: 0.7em;
+      border-color: $Lighter-blue;
+      text-align: center;
+      font-weight: bold;
+    }
+    button {
+      width: 40%;
+      padding: 5px;
+      margin-top: 20px;
+      border: 1px solid $Darker-blue;
+    }
+  }
+
+  &__search {
+    cursor: pointer;
+    background-color: $Lighter-blue;
+    border: none;
+    color: white;
+    padding: 5px;
+    width: 50%;
+    text-transform: capitalize;
+    font-weight: bold;
+    border-radius: 0.7em;
+  }
 }
