--- a/src/components/FoodDiaryContent/FoodDiaryContent.scss
+++ b/src/components/FoodDiaryContent/FoodDiaryContent.scss
@@ -13,7 +13,7 @@
       width: 10px;
       background-color: rgb(238, 238, 238);
       text-transform: capitalize;
-      padding: 7px 15px 7px 10px;
+      padding: 8px 11px 8px 11px;
       border-bottom: 1px solid rgb(230, 230, 230);
     }
   }
@@ -44,6 +44,13 @@
     font-weight: bold;
     text-transform: lowercase !important;
     font-size: 16px;
+
+    &:hover {
+      cursor: pointer;
+      background-color: red;
+      color: white;
+      border-radius: 8px;
+    }
   }
 }
 td.food-diary-render-meals-header {
@@ -54,7 +61,7 @@ td.food-diary-render-meals-header {
 }
 .totals {
   text-align: center;
-  padding: 7px;
+  padding: 12px;
 }
 
 tfoot {
